Fix varargs warnings.